--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,10 +1,13 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
 
-project.ext.mainClassName = "rosthouse.rosty.desktop.DesktopLauncher"
-project.ext.assetsDir = new File("../android/assets");
+//project.ext.mainClassName = 'rosthouse.rosty.desktop.DesktopLauncher'
+//project.ext.assetsDir = new File('../android/assets');
+
+ext.mainClassName = 'rosthouse.rosty.desktop.DesktopLauncher'
+ext.assetsDir = new File('../android/assets');
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
@@ -13,6 +16,11 @@ task run(dependsOn: classes, type: JavaExec) {
     workingDir = project.assetsDir
     ignoreExitValue = true
 }
+
+if (!hasProperty('mainClass')) { 
+    ext.mainClass = 'rosthouse.rosty.desktop.DesktopLauncher' 
+}
+
 
 task dist(type: Jar) {
     from files(sourceSets.main.output.classesDir)
