Added TMX map loading

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,3 +1,6 @@
+
+import sun.org.mozilla.javascript.internal.Node
+
 apply plugin: "java"
 
 sourceCompatibility = 1.7
@@ -7,7 +10,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 //project.ext.assetsDir = new File('../android/assets');
 
 ext.mainClassName = 'rosthouse.rosty.desktop.DesktopLauncher'
-ext.assetsDir = new File('../android/assets');
+ext.assetsDir = new File('../android/assets/');
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
@@ -38,14 +41,15 @@ dist.dependsOn classes
 eclipse {
     project {
         name = appName + "-desktop"
-        linkedResource name: 'assets', type: '2', location: 'PARENT-1-PROJECT_LOC/android/assets'
+        linkedResource name: 'assets', type: '2', location: '../android/assets'
+//        linkedResource name: 'assets', type: '2', location: 'PARENT-1-PROJECT_LOC/android/assets'
     }
 }
 
 task afterEclipseImport(description: "Post processing after project generation", group: "IDE") {
   doLast {
     def classpath = new XmlParser().parse(file(".classpath"))
-    new Node(classpath, "classpathentry", [ kind: 'src', path: 'assets' ]);
+    new Node(classpath, "classpathentry", [ kind: 'src', path: 'assets' ])
     def writer = new FileWriter(file(".classpath"))
     def printer = new XmlNodePrinter(new PrintWriter(writer))
     printer.setPreserveWhitespace(true)
