--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,6 +27,11 @@
             <version>1.5.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-ai</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
