--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -5,11 +5,11 @@
 					android:versionCode="1"
 					android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" >
 		<activity android:name="EngineActivity"
 							android:label="@string/app_name"
 							android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-							android:configChanges="keyboard|keyboardHidden|orientation">
+							android:configChanges="keyboard|keyboardHidden|orientation" android:screenOrientation="landscape">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
