--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.badlogicgames.ashley</groupId>
             <artifactId>ashley</artifactId>
-            <version>1.3.3-SNAPSHOT</version>
+            <version>1.3.4</version>
             <type>jar</type>
         </dependency>
         <dependency>
